# first-webassembly

./: Cargo.toml  Makefile  index.html
src/: lib.rs
